docs/release-notes/5.43.1/upgrade-guide.mdx
---
id: f3c8d6e2
title: Upgrade from 5.42.x to 5.43.1
description: Learn how to upgrade Webiny from 5.42.x to 5.43.1.
---

import { Alert } from "@/components/Alert";
import { AdditionalNotes } from "@/components/upgrade/AdditionalNotes";

<Alert type="success" title="What you’ll learn">

- how to upgrade Webiny from 5.42.x to 5.43.1

</Alert>

<Alert type="info">

Make sure to check out the [5.43.1 changelog](./changelog) to get familiar with the changes introduced in this release.

</Alert>

## Step-by-Step Guide

### 1. Upgrade Webiny Packages

Upgrade all Webiny NPM packages by running the following command:

```bash
yarn up "@webiny/*@5.43.1"
```

Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return **5.43.1**.

### 2. Run the Upgrade Command (If Upgrading from 5.42.x)

In case you are upgrading to **5.43.1** from **5.42.x**, you must upgrade your project. Depending on your project, you might also need to perform a couple of manual steps.

Before proceeding with the next step, make sure to check the [2. Run the Upgrade Command](/docs/release-notes/5.43.0/upgrade-guide#2-run-the-upgrade-command) section of the [Upgrade From 5.42.x to 5.43.0](/docs/release-notes/5.43.0/upgrade-guide) upgrade guide.

### 3. Deploy Your Project

Proceed by redeploying your Webiny project:

```bash
# Execute in your project root.
yarn webiny deploy --env {environment}
```

<AdditionalNotes />
