docs/release-notes/5.43.4/upgrade-guide.mdx
---
id: a7e2b1c4
title: Upgrade from 5.42.x to 5.43.4
description: Learn how to upgrade Webiny from 5.42.x to 5.43.4.
---

import { Alert } from "@/components/Alert";
import { AdditionalNotes } from "@/components/upgrade/AdditionalNotes";

<Alert type="success" title="What you’ll learn">

- how to upgrade Webiny from 5.42.x to 5.43.4

</Alert>

<Alert type="info">

Make sure to check out the [5.43.4 changelog](./changelog) to get familiar with the changes introduced in this release.

</Alert>

## Step-by-Step Guide

### 1. Upgrade Webiny Packages

Upgrade all Webiny NPM packages by running the following command:

```bash
yarn up "@webiny/*@5.43.4"
```

Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return **5.43.4**.

### 2. Run the Upgrade Command (If Upgrading from 5.42.x)

In case you are upgrading to **5.43.4** from **5.42.x**, you must upgrade your project. Depending on your project, you might also need to perform a couple of manual steps.

Before proceeding with the next step, make sure to check the [2. Run the Upgrade Command](/docs/release-notes/5.43.0/upgrade-guide#2-run-the-upgrade-command) section of the [Upgrade From 5.42.x to 5.43.0](/docs/release-notes/5.43.0/upgrade-guide) upgrade guide.

### 3. Update Your Project's Dependencies (Even If Upgrading from 5.43.x)

Because this patch addresses some of the security vulnerabilities in Webiny dependencies, you must run some commands to make sure your project is using latest possible versions of those dependencies.

```bash
yarn up crypto-browserify pbkdf2 fastify sha.js form-data cipher-base tmp -R
```

<Alert type="warning">
  This step is required because some of the dependencies are not directly controlled by Webiny, and
  you need to update them manually.
</Alert>

### 4. Deploy Your Project

Proceed by redeploying your Webiny project:

```bash
# Execute in your project root.
yarn webiny deploy --env {environment}
```

<AdditionalNotes />
